scss/main.scss
@import 'config';
@import 'utilities';

// General Styles
* {
  margin: 0;
  padding: 0;
}

body {
  font-family: "Dosis", sans-serif;
  line-height: 1.6;
  background: #fff;
}

a {
  text-decoration: none;
  color: $dark-color;
}

ul {
  list-style: none;
}

h2, h3, h4 {
  text-transform: uppercase;
}

img {
  width: 100%;
}

// Logo
#logo {
  width: 39px;
  height: 39px;
  color: #fff;
  text-transform: uppercase;
}

// Main Nav
#main-nav {
  display: flex;
  justify-content: space-between;
  padding-top: 1rem;

  ul {
    display: flex;
  }

  li {
    padding: 1rem 1.5rem;
  }

  a {
    text-decoration: none;
    color: #fff;
    text-transform: uppercase;
    border-bottom: 3px solid transparent;
    padding-bottom: 0.5rem;
    transition: border-color 0.5s;

    &:hover {
      border-color: $light-color;
    }

    &.current {
      border-color: $main-color;
    }
  }
}

// Header 
#header {
  // Header Home
  &-home {
    background: $bg-image no-repeat center right / cover;
    height: 100vh;
    color: #fff;

    // Header Content
    .header-content {
      text-align: center;
      padding-top: 15%;
    }

    h1 {
      font-size: 3.8rem;
      line-height: 1.2;
    }
  }


  // Header Inner
  &-inner {
    
  }
}

// Home Sections
#home {
  // Home Section A
  &-a {
    .specials {
      margin-top: 3rem;
      display: grid;
      grid-gap: 1rem;
      grid-template-columns: repeat(4, 1fr);

      .fas {
        color: $main-color;
        padding-bottom: 0.4rem;
      }
    }
  }

  // Home Section B
  &-b {
    .stats {
      display: grid;
      grid-template-columns: repeat(4, 1fr);

      li {
        line-height: 2;

        &.stats-title {
          font-size: 1.5rem;
        }

        &.stats-number {
          font-size: 2rem;
          font-weight: bold;
        }
      }

      div {
        padding: 3rem 0;

        &:nth-child(odd) {
          background-color: $light-color;
        }

        &:nth-child(even) {
          background-color: $medium-color;
        }
      }
    }
  }
}

